# AMfe

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  conda_setup.py  meson.build  meta.cfg  pyproject.toml  setup.py  setup_develop.py
.github/workflows/: python-package-conda.yml
docs/: notes.rst
docs/chapters/package_doc/: amfe.io.mesh.reader.rst
docs/release/: 1.2.0-notes.rst  1.3.0-notes.rst  X.X.X-notes.rst  index.rst
examples/: Beam.py  Subs_CompositeBeam.py  linear_spring_example.py  nonlinear_beam.py  nonlinear_beam_hyperreduction.py
examples/simple_beam/: simple_beam.py  simple_beam_metis10.py
src/amfe/: __init__.py  logging.py  material.py  mesh.py  meson.build  tools.py  ui.py
src/amfe/assembly/: meson.build  refactoring_temp.py  structural_assembly.py
src/amfe/component/: component_connector.py  constants.py  mesh_component.py  meson.build  partitioner.py  structural_component.py
src/amfe/constraint/: constraint.py  constraint_assembler.py  constraint_formulation.py  constraint_formulation_boolean_elimination.py  constraint_formulation_follower_elimination.py  constraint_formulation_lagrange_multiplier.py  constraint_formulation_nullspace_elimination.py  constraint_manager.py  meson.build
src/amfe/element/: __init__.py  linear_beam.py  linear_spring.py  meson.build  prism6.py
src/amfe/element/shapefunction/: meson.build
src/amfe/element/shapefunction/python/: line2.py  meson.build
src/amfe/io/: meson.build  tools.py
src/amfe/io/mesh/: base.py  meson.build
src/amfe/io/mesh/reader/: __init__.py  abaqus_ascii_reader.py  amfe_mesh_obj_mesh_reader.py  gmsh_ascii_mesh_reader.py  gmsh_ascii_v4_mesh_reader.py  hdf5_mesh_reader.py  meson.build  salome_med_v4_mesh_reader.py
src/amfe/io/mesh/writer/: amfe_mesh_converter.py  hdf5_mesh_converter.py  meson.build  vtk_mesh_converter.py
src/amfe/io/postprocessing/: amfe_postprocess_mesh_converter.py  meson.build
src/amfe/io/postprocessing/reader/: amfe_hdf5_post_processor_reader.py  amfe_solution_reader.py  meson.build
src/amfe/io/postprocessing/writer/: hdf5_post_processor_writer.py  meson.build
src/amfe/linalg/: linearsolvers.py  meson.build
src/amfe/linalg/lib/: loadmkl.py  meson.build
src/amfe/mapping/: mapping_base.py  mapping_standard.py  meson.build
src/amfe/mor/: __init__.py  meson.build  reduction_basis.py  ui.py
src/amfe/mor/hyper_red/: ecsw.py  ecsw_assembly.py  ecsw_g_assembly.py  meson.build  training_set_generation.py
src/amfe/neumann/: meson.build  neumann_manager.py  structural_neumann.py
src/amfe/solver/: initializer.py  meson.build  nonlinear_solver.py  solution.py  solver.py  translators.py
tests/: io_tools.py  test_assembly.py  test_component.py  test_component_connector.py  test_constraint_boolean_elimination_formulation.py  test_constraint_follower_elimination_formulation.py  test_constraint_lagrange_formulation.py  test_constraint_manager.py  test_constraint_nullspace_elimination_formulation.py  test_constraints.py  test_ecsw.py  test_element.py  test_integrator.py  test_io.py  test_linear_solvers.py  test_linear_spring.py  test_material.py  test_mesh.py  test_mesh_component.py  test_neumann.py  test_nonlinear_solver.py  test_partitioner.py  test_postprocessing.py  test_solution.py  test_test_tools.py  test_tools.py  tools.py
tests/integration_tests/: test_igr_shapefunctions.py
