[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy', 'meson', 'ninja']

[project]
name = 'amfe'
version = '1.3.0'
description = 'Nonlinear Finite Element Code with simplicity in mind.'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE'}
authors = [
    { name = 'Christian Meyer', email = 'christian.meyer@tum.de' },
    { name = 'Andreas Seibold', email = 'andreas.seibold@tum.de'},
    { name = 'Johannes Rutzmoser', email = 'johannes.rutzmoser@tum.de '}
]
maintainers = [
  { name = "Christian Meyer", email = "christian.meyer@tum.de"}
]
dependencies = [
    "scipy >=1.1.0",
    "pandas >=0.23",
    "h5py",
    "matplotlib",
    "vtk",
    "mkl",
    "sphinx",
    "sphinx_rtd_theme",
    "numpydoc",
    "numpy",
    "sympy"
    ]
