python_sources = [
  '__init__.py',
  'constraint.py',
  'constraint_assembler.py',
  'constraint_formulation.py',
  'constraint_formulation_boolean_elimination.py',
  'constraint_formulation_follower_elimination.py',
  'constraint_formulation_lagrange_multiplier.py',
  'constraint_formulation_nullspace_elimination.py',
  'constraint_manager.py',
  'tools.py'
]

py3.install_sources(
  python_sources,
  subdir: 'amfe/constraint'
)
