python_sources = [
  '__init__.py',
  'bar_2d_lumped.py',
  'boundary_element.py',
  'element.py',
  'hexa20.py',
  'hexa8.py',
  'line_linear_boundary.py',
  'line_quadratic_boundary.py',
  'linear_beam.py',
  'linear_spring.py'
  'prism6.py',
  'quad4.py',
  'quad4_boundary.py',
  'quad8.py',
  'quad8_boundary.py',
  'tet10.py',
  'tet4.py',
  'tools.py',
  'tri3.py',
  'tri3_boundary.py',
  'tri6.py',
  'tri6_boundary.py',
]

py3.install_sources(
  python_sources,
  subdir: 'amfe/element'
)

subdir('shapefunction')
