python_sources = [
  '__init__.py',
  'abaqus_ascii_reader.py',
  'amfe_mesh_obj_mesh_reader.py',
  'gid_ascii_mesh_reader.py',
  'gid_json_mesh_reader.py',
  'gmsh_ascii_mesh_reader.py',
  'gmsh_ascii_v4_mesh_reader.py',
  'hdf5_mesh_reader.py',
  'salome_med_v4_mesh_reader.py'
]

py3.install_sources(
  python_sources,
  subdir: 'amfe/io/mesh/reader'
)
